--- a/public_html/index.html
+++ b/public_html/index.html
@@ -33,7 +33,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg ">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
                         <img src="./img/logo.png" alt=""/>
@@ -44,10 +44,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <div class="collapse navbar-collapse" id="main-menu">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="about.html">about</a>
+                                <a class="nav-link" aria-current="page" href="about.html">about
+                                <span class="fas fa-plus toggle-submenu"></span>
+                                </a>
+                                <ul class="submenu list-unstyled">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Team 1</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Team 2</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Team 3</a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="services.html">services</a>
+                                <a class="nav-link active" href="services.html">services</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="blog.html">blog</a>
