--- a/public_html/index.html
+++ b/public_html/index.html
@@ -74,6 +74,36 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             </nav>  
 
         </header>
+        <section class="hero-section" style="background-image: url('./img/home/home-01.png')">
+            <div class="container hero-content">
+                <h2 class="section-big-title">Welcome to Mademoiselle</h2>
+            </div>
+        </section>
+        <section class="latest-news">
+            <div>
+                <h2>
+                    Stay Up with the Latest Beauty Trends
+                </h2>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <article class="news-item h-100">
+                            <a class="d-block">
+                                <img src="./img/home/news-01.png" alt=""/>
+                            </a>
+                            <div>
+                                <p>07/13/2019</p>
+                                <h2>
+                                    <a class="d-block">
+                                        Welcome To The Online Best Model Winner Contest At Lookoftheyear
+                                    </a>
+                                </h2>
+                            </div>
+                        </article>  
+                    </div>
+                </div>
+            </div>
+            
+        </section>
 
 
 
