latest-news done

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -79,22 +79,52 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <h2 class="section-big-title">Welcome to Mademoiselle</h2>
             </div>
         </section>
-        <section class="latest-news">
-            <div>
-                <h2>
+        <section class="latest-news py-4">
+            <div class="container">
+                <h2 class="section-title">
                     Stay Up with the Latest Beauty Trends
                 </h2>
-                <div class="row">
-                    <div class="col-12 col-md-6">
+                <div class="row justify-content-between">
+                    <div class="col-12 col-md-4 mb-2 mb-md-0">
                         <article class="news-item h-100">
-                            <a class="d-block">
+                            <a href="#" class="d-block ratio ratio-3x4">
                                 <img src="./img/home/news-01.png" alt=""/>
                             </a>
                             <div>
                                 <p>07/13/2019</p>
                                 <h2>
-                                    <a class="d-block">
+                                    <a href="#" class="d-block">
                                         Welcome To The Online Best Model Winner Contest At Lookoftheyear
+                                    </a>
+                                </h2>
+                            </div>
+                        </article>  
+                    </div>
+                    <div class="col-12 col-md-4 mb-2 mb-md-0">
+                        <article class="news-item h-100">
+                            <a href="#" class="d-block ratio ratio-3x4">
+                                <img src="./img/home/news-02.png" alt=""/>
+                            </a>
+                            <div>
+                                <p>05/15/2019</p>
+                                <h2>
+                                    <a href="#" class="d-block">
+                                        Aiming For Higher The Mastopexy
+                                    </a>
+                                </h2>
+                            </div>
+                        </article>  
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <article class="news-item h-100">
+                            <a href="#" class="d-block ratio ratio-3x4">
+                                <img src="./img/home/news-03.png" alt=""/>
+                            </a>
+                            <div>
+                                <p>02/15/2019</p>
+                                <h2>
+                                    <a href="#" class="d-block">
+                                       Seven Steps For Keeping Teeth Healthy For A Lifetime
                                     </a>
                                 </h2>
                             </div>
