--- a/public_html/index.html
+++ b/public_html/index.html
@@ -45,7 +45,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="about.html">about
-                                <span class="fas fa-plus toggle-submenu"></span>
+                                    <span class="fas fa-plus toggle-submenu"></span>
                                 </a>
                                 <ul class="submenu list-unstyled">
                                     <li class="nav-item">
@@ -124,7 +124,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                 <p>02/15/2019</p>
                                 <h2>
                                     <a href="#" class="d-block">
-                                       Seven Steps For Keeping Teeth Healthy For A Lifetime
+                                        Seven Steps For Keeping Teeth Healthy For A Lifetime
                                     </a>
                                 </h2>
                             </div>
@@ -132,7 +132,96 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     </div>
                 </div>
             </div>
-            
+
+        </section>
+        <section class="services">
+            <div class="container">
+                <h2 class="section-title">Our Services</h2>
+                <article class="services-item">
+                    <div class="row align-items-stretch justify-content-md-center">
+                        <div class="col-12 col-md-6 services-img">
+                            <a href="#" class="services-item-image d-block h-100">
+                                <img src="img/home/service-img-01.png" alt=""/>
+                            </a>
+                        </div>
+                        <div class="col-12 col-md-6 services-contain">
+                            <article class="h-100">
+                                <h2>
+                                    <a href="#">
+                                        Lip augmentation Lip filling with hyaluronum
+                                    </a>
+                                </h2>
+                                <a href="#" class="d-block btn btn-more">
+                                    learn more
+                                </a>
+                            </article>
+                        </div>
+                    </div>
+                </article>
+                <article class="services-item">
+                    <div class="row justify-content-between align-items-stretch">
+                        <div class="col-12 col-md-6 services-img">
+                            <a href="#" class="services-item-image d-block h-100">
+                                <img src="img/home/service-img-02.png" alt=""/>
+                            </a>
+                        </div>
+                        <div class="col-12 col-md-6 services-contain">
+                            <article class="h-100">
+                                <h2>
+                                    <a href="#">
+                                        male and female haircut
+                                    </a>
+                                </h2>
+                                <a href="#" class="d-block btn btn-more">
+                                    learn more
+                                </a>
+                            </article>
+                        </div>
+                    </div>
+                </article>
+                <article class="services-item">
+                    <div class="row justify-content-between align-items-stretch">
+                        <div class="col-12 col-md-6 services-img">
+                            <a href="#" class="services-item-image d-block h-100">
+                                <img src="img/home/service-img-03.png" alt=""/>
+                            </a>
+                        </div>
+                        <div class="col-12 col-md-6 services-contain">
+                            <article class="h-100">
+                                <h2>
+                                    <a href="#">
+                                        Day and night makeup
+                                    </a>
+                                </h2>
+                                <a href="#" class="d-block btn btn-more">
+                                    learn more
+                                </a>
+                            </article>
+                        </div>
+                    </div>
+                </article>
+                <article class="services-item">
+                    <div class="row justify-content-between align-items-stretch">
+                        <div class="col-12 col-md-6 services-img">
+                            <a href="#" class="services-item-image d-block h-100">
+                                <img src="img/home/service-img-04.png" alt=""/>
+                            </a>
+                        </div>
+                        <div class="col-12 col-md-6 services-contain">
+                            <article class="h-100">
+                                <h2>
+                                    <a href="#">
+                                        Waxing with cold and warm wax
+                                    </a>
+                                </h2>
+                                <a href="#" class="d-block btn btn-more">
+                                    learn more
+                                </a>
+                            </article>
+                        </div>
+                    </div>
+                </article>
+            </div>
         </section>
 
 
