--- a/public_html/index.html
+++ b/public_html/index.html
@@ -25,8 +25,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="application-name" content='Template'>
         <link rel="icon" type="image/png" href="./android-icon-192x192.png">
-
-
+        
+        <link href="css/owl.carousel.css" rel="stylesheet" type="text/css"/>
+        <link href="css/owl.theme.default.css" rel="stylesheet" type="text/css"/>
 
         <link href="css/theme.css" rel="stylesheet" type="text/css"/>
         <link href="css/developer.css" rel="stylesheet" type="text/css"/>
@@ -93,7 +94,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <div>
                                 <p>07/13/2019</p>
                                 <h2>
-                                    <a href="#" class="d-block">
+                                    <a href="#">
                                         Welcome To The Online Best Model Winner Contest At Lookoftheyear
                                     </a>
                                 </h2>
@@ -108,7 +109,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <div>
                                 <p>05/15/2019</p>
                                 <h2>
-                                    <a href="#" class="d-block">
+                                    <a href="#">
                                         Aiming For Higher The Mastopexy
                                     </a>
                                 </h2>
@@ -123,7 +124,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <div>
                                 <p>02/15/2019</p>
                                 <h2>
-                                    <a href="#" class="d-block">
+                                    <a href="#">
                                         Seven Steps For Keeping Teeth Healthy For A Lifetime
                                     </a>
                                 </h2>
@@ -223,6 +224,85 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 </article>
             </div>
         </section>
+        <section class="testimonials">
+            <div class="container">
+                <h2 class="section-title">
+                    Trust our professionals
+                </h2>
+                <div class="testimonals-slider owl-carousel owl-theme">
+                    <article class="testimonials-slider-item">
+                        <div class="row justify-content-between align-items-center">
+                            <div class="col-12 col-md-4">
+                                <figure class="testimonials-slider-item-image d-block h-100 ratio ratio-1x1">
+                                    <img src="img/home/testimonials-img.png" alt=""/>
+                                </figure>
+                            </div>
+                            <div class="col-12 col-md-5">
+                                <div class="testimonials-slider-item-data h-100">
+                                    <h2 class="testimonials-slider-item-title mb-2">Vera Valdez</h2>
+                                    <p>
+                                        Lorem Ipsum is simply dummy text of the printing
+                                        and typesetting industry. Lorem Ipsum has been the 
+                                        industry's standard dummy text ever since the 1500s,
+                                        when an unknown printer took a galley of type and
+                                        scrambled it to make a type specimen book. It has
+                                        survived not only five centuries, but also the leap
+                                        into electronic typesetting, remaining essentially unchanged.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="testimonials-slider-item">
+                        <div class="row justify-content-around align-items-center">
+                            <div class="col-4">
+                                <figure class="testimonials-slider-item-image h-100 ratio ratio-1x1">
+                                    <img src="img/home/testimonials-img.png" alt=""/>
+                                </figure>
+                            </div>
+                            <div class="col-5">
+                                <div class="testimonials-slider-item-data h-100">
+                                    <h2 class="testimonials-slider-item-title mb-2">Vera Valdez</h2>
+                                    <p>
+                                        Lorem Ipsum is simply dummy text of the printing
+                                        and typesetting industry. Lorem Ipsum has been the 
+                                        industry's standard dummy text ever since the 1500s,
+                                        when an unknown printer took a galley of type and
+                                        scrambled it to make a type specimen book. It has
+                                        survived not only five centuries, but also the leap
+                                        into electronic typesetting, remaining essentially unchanged.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="testimonials-slider-item">
+                        <div class="row justify-content-around align-items-center">
+                            <div class="col-4">
+                                <figure class="testimonials-slider-item-image h-100 ratio ratio-1x1">
+                                    <img src="img/home/testimonials-img.png" alt=""/>
+                                </figure>
+                            </div>
+                            <div class="col-5">
+                                <div class="testimonials-slider-item-data h-100">
+                                    <h2 class="testimonials-slider-item-title mb-2">Vera Valdez</h2>
+                                    <p>
+                                        Lorem Ipsum is simply dummy text of the printing
+                                        and typesetting industry. Lorem Ipsum has been the 
+                                        industry's standard dummy text ever since the 1500s,
+                                        when an unknown printer took a galley of type and
+                                        scrambled it to make a type specimen book. It has
+                                        survived not only five centuries, but also the leap
+                                        into electronic typesetting, remaining essentially unchanged.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
 
 
 
@@ -240,6 +320,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
         <script src="https://kit.fontawesome.com/08d5b84b49.js" crossorigin="anonymous"></script>
         <script src="./js/bootstrap.bundle.min.js" type="text/javascript"></script>
+
+
+        <script src="./js/owl.carousel.min.js" type="text/javascript"></script>
+
         <script src="js/main.js" type="text/javascript"></script>
     </body>
 </html>
