--- a/public_html/index.html
+++ b/public_html/index.html
@@ -75,7 +75,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             </nav>  
 
         </header>
-        <section class="hero-section" style="background-image: url('./img/home/home-01.png')">
+        <section class="hero-section" style="background-image: url('img/hero/home-01.png')">
             <div class="container hero-content">
                 <h2 class="section-big-title">Welcome to Mademoiselle</h2>
             </div>
@@ -89,7 +89,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <div class="col-12 col-md-4 mb-2 mb-md-0">
                         <article class="news-item h-100">
                             <a href="#" class="d-block ratio ratio-3x4">
-                                <img src="./img/home/news-01.png" alt=""/>
+                                <img src="img/news/news-01.png" alt=""/>
                             </a>
                             <div>
                                 <p>07/13/2019</p>
@@ -104,7 +104,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <div class="col-12 col-md-4 mb-2 mb-md-0">
                         <article class="news-item h-100">
                             <a href="#" class="d-block ratio ratio-3x4">
-                                <img src="./img/home/news-02.png" alt=""/>
+                                <img src="img/news/news-02.png" alt=""/>
                             </a>
                             <div>
                                 <p>05/15/2019</p>
@@ -119,7 +119,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <div class="col-12 col-md-4">
                         <article class="news-item h-100">
                             <a href="#" class="d-block ratio ratio-3x4">
-                                <img src="./img/home/news-03.png" alt=""/>
+                                <img src="img/news/news-03.png" alt=""/>
                             </a>
                             <div>
                                 <p>02/15/2019</p>
@@ -142,7 +142,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <div class="row align-items-stretch justify-content-md-center">
                         <div class="col-12 col-md-6 services-img">
                             <a href="#" class="services-item-image d-block h-100">
-                                <img src="img/home/service-img-01.png" alt=""/>
+                                <img src="img/services/service-img-01.png" alt=""/>
                             </a>
                         </div>
                         <div class="col-12 col-md-6 services-contain">
@@ -163,7 +163,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <div class="row justify-content-between align-items-stretch">
                         <div class="col-12 col-md-6 services-img">
                             <a href="#" class="services-item-image d-block h-100">
-                                <img src="img/home/service-img-02.png" alt=""/>
+                                <img src="img/services/service-img-02.png" alt=""/>
                             </a>
                         </div>
                         <div class="col-12 col-md-6 services-contain">
@@ -184,7 +184,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <div class="row justify-content-between align-items-stretch">
                         <div class="col-12 col-md-6 services-img">
                             <a href="#" class="services-item-image d-block h-100">
-                                <img src="img/home/service-img-03.png" alt=""/>
+                                <img src="img/services/service-img-03.png" alt=""/>
                             </a>
                         </div>
                         <div class="col-12 col-md-6 services-contain">
@@ -205,7 +205,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <div class="row justify-content-between align-items-stretch">
                         <div class="col-12 col-md-6 services-img">
                             <a href="#" class="services-item-image d-block h-100">
-                                <img src="img/home/service-img-04.png" alt=""/>
+                                <img src="img/services/service-img-04.png" alt=""/>
                             </a>
                         </div>
                         <div class="col-12 col-md-6 services-contain">
@@ -234,7 +234,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <div class="row justify-content-between align-items-center">
                             <div class="col-12 col-md-4">
                                 <figure class="testimonials-slider-item-image d-block h-100 ratio ratio-1x1">
-                                    <img src="img/home/testimonials-img.png" alt=""/>
+                                    <img src="img/testimonials/testimonials-img.png" alt=""/>
                                 </figure>
                             </div>
                             <div class="col-12 col-md-5">
@@ -257,7 +257,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <div class="row justify-content-around align-items-center">
                             <div class="col-12 col-md-4">
                                 <figure class="testimonials-slider-item-image h-100 ratio ratio-1x1">
-                                    <img src="img/home/testimonials-img.png" alt=""/>
+                                    <img src="img/hero/testimonials-img.png" alt=""/>
                                 </figure>
                             </div>
                             <div class="col-12 col-md-5">
@@ -280,7 +280,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <div class="row justify-content-around align-items-center">
                             <div class="col-12 col-md-4">
                                 <figure class="testimonials-slider-item-image h-100 ratio ratio-1x1">
-                                    <img src="img/home/testimonials-img.png" alt=""/>
+                                    <img src="img/hero/testimonials-img.png" alt=""/>
                                 </figure>
                             </div>
                             <div class="col-12 col-md-5">
