--- a/public_html/index.html
+++ b/public_html/index.html
@@ -257,7 +257,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <div class="row justify-content-around align-items-center">
                             <div class="col-12 col-md-4">
                                 <figure class="testimonials-slider-item-image h-100 ratio ratio-1x1">
-                                    <img src="img/hero/testimonials-img.png" alt=""/>
+                                    <img src="img/testimonials/testimonials-img.png" alt=""/>
                                 </figure>
                             </div>
                             <div class="col-12 col-md-5">
@@ -280,7 +280,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <div class="row justify-content-around align-items-center">
                             <div class="col-12 col-md-4">
                                 <figure class="testimonials-slider-item-image h-100 ratio ratio-1x1">
-                                    <img src="img/hero/testimonials-img.png" alt=""/>
+                                    <img src="img/testimonials/testimonials-img.png" alt=""/>
                                 </figure>
                             </div>
                             <div class="col-12 col-md-5">
@@ -328,6 +328,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
 
         <script src="./js/owl.carousel.min.js" type="text/javascript"></script>
+        <script src="js/jquery.validate.min.js" type="text/javascript"></script>
 
         <script src="js/main.js" type="text/javascript"></script>
     </body>
